A partir daqui é pra valer

--- a/Java&Arduino/nbproject/project.properties
+++ b/Java&Arduino/nbproject/project.properties
@@ -27,7 +27,7 @@ dist.dir=dist
 dist.jar=${dist.dir}/Java_Arduino.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.RXTXcomm.jar=C:\\Users\\porto\\Downloads\\RXTXcomm.jar
+file.reference.RXTXcomm.jar=src\\RXTXcomm.jar
 includes=**
 jar.compress=false
 javac.classpath=\
