--- a/Java&Arduino/nbproject/project.properties
+++ b/Java&Arduino/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.jar=${dist.dir}/Java_Arduino.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.RXTXcomm.jar=C:\\Users\\porto\\Downloads\\RXTXcomm.jar
+file.reference.RXTXcomm.jar-1=C:\\Program Files\\Java\\jdk1.8.0_181\\lib\\RXTXcomm.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.RXTXcomm.jar}
+    ${file.reference.RXTXcomm.jar}:\
+    ${file.reference.RXTXcomm.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
